reorganize modules & improve styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <title>SimLadd</title>
 
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="/src/styles/base.css" />
+    <link rel="stylesheet" href="/src/styles/editor.css" />
     <script type="module" src="/src/main.ts" defer></script>
   </head>
 
